# mcp-registry

./: README.md
ide_extension/: README.md  package-lock.json  package.json
ide_extension/src/: authManager.ts  extension.ts  mcpApiClient.ts  mcpServerProvider.ts
mcpg/: README.md  app.py  cli.py  models.py  postman_test_guide.md  pyproject.toml  seed.py  test_auth.py
